# Meta_Hackathon_By_MS

./: Dockerfile  README.md  env.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
